; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/input/keyboard/extr_corgikbd.c_corgikbd_interrupt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/input/keyboard/extr_corgikbd.c_corgikbd_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.corgikbd = type { i32 }

@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @corgikbd_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @corgikbd_interrupt(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.corgikbd*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.corgikbd*
  store %struct.corgikbd* %7, %struct.corgikbd** %5, align 8
  %8 = load %struct.corgikbd*, %struct.corgikbd** %5, align 8
  %9 = getelementptr inbounds %struct.corgikbd, %struct.corgikbd* %8, i32 0, i32 0
  %10 = call i32 @timer_pending(i32* %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %16, label %12

12:                                               ; preds = %2
  %13 = call i32 @udelay(i32 20)
  %14 = load %struct.corgikbd*, %struct.corgikbd** %5, align 8
  %15 = call i32 @corgikbd_scankeyboard(%struct.corgikbd* %14)
  br label %16

16:                                               ; preds = %12, %2
  %17 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %17
}

declare dso_local i32 @timer_pending(i32*) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @corgikbd_scankeyboard(%struct.corgikbd*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
